Exampels of tests